--- a/MegaPlanning/package.json
+++ b/MegaPlanning/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@capacitor-community/http": "^1.4.1",
+    "@capacitor/android": "3.3.2",
     "@capacitor/app": "1.0.6",
     "@capacitor/core": "3.3.2",
     "@capacitor/haptics": "1.1.3",
@@ -25,6 +26,7 @@
     "cal-parser": "^1.0.1",
     "graceful-fs": "^4.2.8",
     "ionicons": "^5.4.0",
+    "package.json": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
